--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato&family=Manrope:wght@400;500&family=Montserrat&family=Open+Sans:wght@400;800&family=Poppins:wght@500&family=Roboto&family=Work+Sans&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/flower.css">
 </head>
+
 <body>
     <header>
-
+        <div class="banner-text">
+            <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                of letters.</p>
+            <div id="banner-button">
+                <button class="button-primary">Shop Now</button>
+            </div>
+        </div>
+        <div class="banner-image">
+            <img src="styles/Flower Asset/pngwing 6.png" alt="">
+        </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
