added hot-deal section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <header>
         <div class="banner-text">
             <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
-            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when
+            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable
+                content of a page when
                 looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
                 of letters.</p>
             <div id="banner-button">
@@ -29,7 +30,17 @@
         </div>
     </header>
     <main>
-        
+        <section class="hot-deal-section">
+            <div class="hot-deal-text">
+                <h4 class="hot-deal-title">Hot Deal ! Sale Up To 25% Off</h4>
+                <p class="hot-deal-paragraph">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+                <button class="button-primary">Sign Up</button>
+            </div>
+            <div class="hot-deal-image">
+                <img src="styles/Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
