added a new flower gallery section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
     </header>
     <main>
+        <!-- Hot Deal section -->
         <section class="hot-deal-section">
             <div class="hot-deal-text">
                 <h4 class="hot-deal-title">Hot Deal ! Sale Up To 25% Off</h4>
@@ -41,6 +42,24 @@
                 <img src="styles/Flower Asset/pngwing 8.png" alt="">
             </div>
         </section>
+        <!-- flower gallery section -->
+        <section>
+            <div>
+                <div class="setion-text">
+                    <h4 class="section-title">Instagram</h4>
+                    <p class="section-paragraph">It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="flower-gallery">
+                    <img src="styles/Flower Asset/Flower 01.png" alt="">
+                    <img src="styles/Flower Asset/Rectangle 4.png" alt="">
+                    <img src="styles/Flower Asset/Rectangle 5.png" alt="">
+                    <img src="styles/Flower Asset/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        
     </main>
     <footer>
 
