rename a flower asset folder name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="banner-image">
-            <img src="styles/Flower Asset/pngwing 6.png" alt="">
+            <img src="styles/FlowerAsset/pngwing 6.png" alt="">
         </div>
     </header>
     <main>
@@ -39,7 +39,7 @@
                 <button class="button-primary">Sign Up</button>
             </div>
             <div class="hot-deal-image">
-                <img src="styles/Flower Asset/pngwing 8.png" alt="">
+                <img src="styles/FlowerAsset/pngwing 8.png" alt="">
             </div>
         </section>
         <!-- flower gallery section -->
@@ -51,14 +51,25 @@
                         readable content of a page when looking at its layout.</p>
                 </div>
                 <div class="flower-gallery">
-                    <img src="styles/Flower Asset/Flower 01.png" alt="">
-                    <img src="styles/Flower Asset/Rectangle 4.png" alt="">
-                    <img src="styles/Flower Asset/Rectangle 5.png" alt="">
-                    <img src="styles/Flower Asset/Rectangle 6.png" alt="">
+                    <img src="styles/FlowerAsset/Flower 01.png" alt="">
+                    <img src="styles/FlowerAsset/Rectangle 4.png" alt="">
+                    <img src="styles/FlowerAsset/Rectangle 5.png" alt="">
+                    <img src="styles/FlowerAsset/Rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
 
+        <!-- Get the latest deals Section -->
+        <section class="get-the-deals-section">
+            <div>
+                <h4 class="section-title">Get The Latest Deals</h4>
+                <p class="section-paragraph">$30 coupon for first shopping</p>
+            </div>
+            <form action="">
+                <input type="email" name="" id="" placeholder="Enter Your Email here">
+            </form>
+            <button>Subscribe</button>
+        </section>
         
     </main>
     <footer>
